--- a/templates/index5.html
+++ b/templates/index5.html
@@ -26,13 +26,13 @@
           <div class="col-12">
             <label for="birth" class="form-label">練歌時間</label>
             <input type="text" class="form-control" id="birth" name="birth" />
-            <div class="invalid-feedback">請填寫生日！！</div>
+            <div class="invalid-feedback">請填寫時間！！</div>
           </div>
           <!-- 血型 -->
           <div class="col-12">
             <label for="blood" class="form-label">成員</label>
             <input type="text" class="form-control" id="blood" name="blood" />
-            <div class="invalid-feedback">請填寫血型！！</div>
+            <div class="invalid-feedback">請填寫成員！！</div>
           </div>
           <!-- 電話 -->
           <div class="col-12">
