--- a/templates/side_bar.html
+++ b/templates/side_bar.html
@@ -49,19 +49,28 @@
     <input type="checkbox" name="" id="sideMenu--active" />
     <!-- sidebar menu -->
     <div class="sideMenu">
+      <a
+        href="/login"
+        class="fs-5 btn btn-outline-light btn-sm w-50 mx-auto mb-3"
+        id="login"
+        >登入</a
+      >
       <nav class="overflow-auto">
         <a class="link-light" href="/"><i class="fas fa-home"></i>首頁</a>
         <a class="link-light" href="/index1"
-          ><i class="fas fa-calendar-check"></i>登記訂位</a
+          ><i class="fas fa-calendar-check"></i>登記練歌</a
         >
         <a class="link-light" href="/index2"
-          ><i class="fas fa-calendar-day"></i>查詢訂位</a
+          ><i class="fas fa-calendar-day"></i>查詢練歌</a
         >
-        <a class="link-light" href="/index3"
-          ><i class="fas fa-comment"></i>公告</a
-        >
-        <a class="link-light" href="/index4"><i class="fas fa-gear"></i>設定</a>
+        <a class="link-light" href="/index3"><i class="fas fa-gear"></i>設定</a>
       </nav>
+      <a
+        href="/logout"
+        class="fs-5 btn btn-outline-light btn-sm w-50 mx-auto mt-5"
+        id="logout"
+        >登出</a
+      >
       <label for="sideMenu--active">
         <i class="fas fa-angle-right"></i>
       </label>
@@ -157,6 +166,30 @@
     <script>
       let ip = "127.0.0.1:5251";
       $(document).ready(function () {
+        $("#login").hide();
+        $("#logout").hide();
+        check_login();
+        sidebar();
+      });
+
+      function check_login() {
+        $.ajax({
+          url: "/check_login", //存取Json的網址
+          type: "GET",
+          success: function (data) {
+            if (data === "True") {
+              $("#login").hide();
+              $("#logout").show();
+            } else {
+              $("#login").show();
+              $("#logout").hide();
+            }
+            return data;
+          },
+        });
+      }
+
+      function sidebar() {
         // 導覽列功能
         var currentLocation = location.href;
         var menuItem = document.getElementsByClassName("link-light");
@@ -165,10 +198,10 @@
           if (menuItem[i].href === currentLocation) {
             menuItem[i].className += " active";
           }
-          console.log("ok");
+          // console.log("ok");
         }
-        console.log(currentLocation);
-      });
+        // console.log(currentLocation);
+      }
     </script>
   </body>
 </html>
