--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="../static/image/期末.jpg"
+          src="../static/image/1.jpg"
           class="d-block w-100 img-fluid"
           alt="..."
           style="height: 580px; object-fit: cover"
@@ -87,7 +87,7 @@
       </div>
       <div class="carousel-item">
         <img
-          src="../static/image/期中.jpg"
+          src="../static/image/2.jpg"
           class="d-block w-100 img-fluid"
           alt="..."
           style="height: 580px; object-fit: cover"
@@ -101,7 +101,7 @@
       </div>
       <div class="carousel-item">
         <img
-          src="../static/image/草地.jpg"
+          src="../static/image/3.jpg"
           class="d-block w-100 img-fluid"
           alt="..."
           style="height: 580px; object-fit: cover"
