--- a/templates/index1.html
+++ b/templates/index1.html
@@ -5,7 +5,7 @@
 />
 {% endblock %} {% block content%}
 <div class="container overflow-hidden">
-  <div class="row justify-content-center align-items-center p-3">
+  <div class="row justify-content-center align-items-center p-3" style="min-height: 100vh;">
     <div class="col-9">
       <div class="row">
         <!-- 練歌規則 -->
