--- a/templates/index2.html
+++ b/templates/index2.html
@@ -19,7 +19,8 @@
       <input type="hidden" id="my_hidden_input" />
     </div>
   </div>
-  <div class="row row-cols-2 my-3" id="time_list"></div>
+  <!-- 查詢列表 -->
+  <div class="row row-cols-2 my-3 border border-1 border-dark bg-white rounded-4 shadow p-4" id="time_list"></div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script src="../static/js/index2.js"></script>
