--- a/templates/side_bar.html
+++ b/templates/side_bar.html
@@ -77,7 +77,7 @@
       <!-- label 寫在 nav 下方是為了比較好看到 -->
     </div>
     <!-- 內容 -->
-    {% block content %} {% endblock %}
+    <div class="content">{% block content %} {% endblock %}</div>
     <!-- 頁尾 -->
     <footer
       class="text-center text-lg-start text-white mt-1"
@@ -158,7 +158,7 @@
         class="text-center p-4"
         style="background-color: rgba(0, 0, 0, 0.25)"
       >
-        © 2022 Copyright:
+        © 2022 Copyright
         <a class="text-reset fw-bold" href="#">Max.com</a>
       </div>
       <!-- Copyright -->
