--- a/templates/login.html
+++ b/templates/login.html
@@ -45,6 +45,7 @@ style %}
         >
           登入
         </button>
+        <a href="/sign"><p class="text-end">來這裡註冊!!!</p> </a>
         <p class="mt-2 mb-3 text-body-secondary text-center">
           © 2023 by ShaninGuitar
         </p>
