--- a/templates/index1.html
+++ b/templates/index1.html
@@ -3,8 +3,9 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
 />
+<link rel="stylesheet" href="../static/css/index1.css" />
 {% endblock %} {% block content%}
-<div class="container overflow-hidden">
+<div class="container overflow-hidden bg-img">
   <div class="row justify-content-center align-items-center p-3" style="min-height: 100vh;">
     <div class="col-9">
       <div class="row">
