--- a/templates/side_bar.html
+++ b/templates/side_bar.html
@@ -63,7 +63,7 @@
         <a class="link-light" href="/index2"
           ><i class="fas fa-calendar-day"></i>查詢練歌</a
         >
-        <a class="link-light" href="/index3"><i class="fas fa-gear"></i>設定</a>
+        <a class="link-light" href="/index3"><i class="fas fa-gear"></i>系統設定</a>
       </nav>
       <a
         href="/logout"
