--- a/templates/index1.html
+++ b/templates/index1.html
@@ -5,8 +5,15 @@
 />
 <link rel="stylesheet" href="../static/css/index1.css" />
 {% endblock %} {% block content%}
+<div class="container" id="notlogin">
+  <h1 class="text-danger">請先登入才能排隊喔</h1>
+  <a href="/login"></a>
+</div>
 <div class="container overflow-hidden bg-img">
-  <div class="row justify-content-center align-items-center p-3" style="min-height: 100vh;">
+  <div
+    class="row justify-content-center align-items-center p-3"
+    style="min-height: 100vh"
+  >
     <div class="col-9">
       <div class="row">
         <!-- 練歌規則 -->
@@ -49,7 +56,7 @@
         <div class="col-12">
           <div class="border boder-1 bg-white rounded p-4">
             <h1>預約列表</h1>
-            <hr>
+            <hr />
             <div class="row row-cols-2 my-3" id="time_list"></div>
           </div>
         </div>
@@ -65,6 +72,22 @@
     $("#time_list_bg").hide();
     init_datetime();
     search_time();
+    confirm_login();
   });
+  function confirm_login() {
+    $.ajax({
+      url: "/check_login", //存取Json的網址
+      type: "GET",
+      success: function (data) {
+        console.log(data);
+        if (data === "True") {
+          $("#notlogin").hide();
+          $("#search_btn").attr("disabled", false);
+        } else {
+          $("#search_btn").attr("disabled", true);
+        }
+      },
+    });
+  }
 </script>
 {% endblock %}
